syntax = "proto3";

package auth;

import "google/protobuf/struct.proto";

message ServiceResponse {
    int32 statusCode = 1;
    string message = 2;
    google.protobuf.Struct data = 3;
}

message RegisterUserRequest {
    string firstName = 1;
    string lastName = 2;
    string email = 3;
    string phone = 4;
    string password = 5;
    string role = 6;
}

message RegisterUserResponse {
    ServiceResponse data = 1;
}

service AuthService {
    rpc Test (TestRequest) returns (TestResponse);
    rpc RegisterUser(RegisterUserRequest) returns (RegisterUserResponse);
}

message TestRequest {
    string name = 1;
}

message TestResponse {
    string message = 1;
}